# sd-bot

./: .gitignore  .gitmodules  Cargo.toml  backend.py  changelog.md  config-dev.toml  config.json  config.toml  image_generation.py  irc.toml  prompt-comment.tmpl  prompt-completion.tmpl  schema.sql  shell.nix  start.sh  workflow-auraflow.json.tmpl  workflow-cascade.json.tmpl  workflow-flux-checkpoint.json.tmpl  workflow-flux-unet.json.tmpl  workflow-flux.json.tmpl  workflow-nai.json.tmpl  workflow-pixart.json.tmpl  workflow-sd15-baseonly.json.tmpl  workflow-sd15-vae.json.tmpl  workflow-sd15.json.tmpl  workflow-sd3.json.tmpl  workflow-sd35.json.tmpl  workflow-sdxl-kohaku.json.tmpl  workflow-sdxl-norefiner-shugo.json.tmpl  workflow-sdxl-norefiner-unwrong-clip2.json.tmpl  workflow-sdxl-norefiner-unwrong.json.tmpl  workflow-sdxl-norefiner-upscale-clip2-euler.json.tmpl  workflow-sdxl-norefiner-upscale-clip2.json.tmpl  workflow-sdxl-norefiner-upscale.json.tmpl  workflow-sdxl-norefiner.json.tmpl  workflow-sdxl.json  workflow-sdxl.json.tmpl  workflow-segmoe.json.tmpl
.cargo/: config.toml
.flox/: env.json
.flox/env/: manifest.toml
src/: changelog.rs  config.rs  db.rs  discord.rs  flow_generator.rs  generator.rs  gpt.rs  help.rs  irc.rs  main.rs  utils.rs
testdata/: config.toml
